removed border of iframe, corrected styling of headerwrap

--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -80,11 +80,29 @@ html{
 .pieChart {
   height: auto;
 }
-.header {
+.headerWrap {
+  background: #758586;
+  width:100%;
+  height: 100%;
+  padding: 0;
+  margin: auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: space-between;
+}
+.stretch {
+  width: 100%;
+  display: inline-block;
+  font-size: 0;
+  line-height: 0
+}
+.header h1{
   display: flex;
   align-items: center;
-  font-size: 50px;
-  background: #758586;
+  font-size: 40px;
   color: white;
   height: 100px;
   width: 100%;
@@ -99,7 +117,16 @@ html{
   justify-content: center;
 }
 .header.right{
-  justify-content: center;
+  text-align: end;
+  justify-content: right;
+  margin-left:auto;
+}
+h1.header.right{
+  text-align:right;
+}
+
+iframe{
+  border:none;
 }
 
 .number {
